# ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó
# ‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚Ėą‚Ėą‚ēó‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚ēź‚ēź‚ēĚ‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚Ėą‚Ėą‚ēó‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚ēź‚ēź‚ēĚ
# ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēĒ‚ēĚ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó  ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēĒ‚ēĚ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó
# ‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚Ėą‚Ėą‚ēó‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚ēĚ  ‚Ėą‚Ėą‚ēĒ‚ēź‚ēź‚ēź‚ēĚ ‚ēö‚ēź‚ēź‚ēź‚ēź‚Ėą‚Ėą‚ēĎ
# ‚Ėą‚Ėą‚ēĎ  ‚Ėą‚Ėą‚ēĎ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēó‚Ėą‚Ėą‚ēĎ     ‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚Ėą‚ēĎ
# ‚ēö‚ēź‚ēĚ  ‚ēö‚ēź‚ēĚ‚ēö‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēĚ‚ēö‚ēź‚ēĚ     ‚ēö‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēĚ
#‚ēĒ‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēó
#‚ēĎ Rust Efficiency & Performance ‚ēĎ
#‚ēö‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēź‚ēĚ
[package]
name    = "raft-io"
version = "0.7.0"

# Minimum Supported Rust Version (MSRV)
rust-version = "1.85"
edition = "2024"

# License
license = "Apache-2.0 OR MIT"

# Readme
readme = "README.md"

# Description
description = "Raft consensus and replicated-log engine for Rust. Leader election, log replication, membership changes, and snapshotting over a pluggable transport and a pluggable log store. The consensus layer above wal-db and the coordination substrate for Hive DB clustering."

# Keywords (5 max)
keywords = [
    "raft",
    "consensus",
    "distributed-systems",
    "state-machine",
    "replication"
]

# Categories
categories = [
    "algorithms",
    "concurrency",
    "network-programming"
]

# Links
homepage      = "https://github.com/jamesgober/raft-io"
repository    = "https://github.com/jamesgober/raft-io"
documentation = "https://docs.rs/raft-io"

# Authors
authors = [
    "James Gober <me@jamesgober.com>"
]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
name = "raft_io"
path = "src/lib.rs"


# FEATURE FLAGS
# #################################
# Additive only.
[features]
# Durable Raft log via `wal-db`: adds `WalLog`, a `RaftLog` whose entries and
# hard state survive a restart. The in-memory path is unaffected when off.
persistence = ["dep:wal-db"]
# Typed wire framing via `pack-io`: adds `framing::encode` / `framing::decode`
# for `Message`, and derives `pack_io::Serialize`/`Deserialize` on the message
# types. Off by default; the protocol is unchanged when disabled.
framing = ["dep:pack-io", "pack-io/derive"]


# DEPENDENCIES
# #################################
[dependencies]
# Domain error type. Portfolio crates standardise on `error-forge` for the
# stable `kind` / `caption` / severity metadata consumers rely on; its
# `ForgeError` supertrait is `std::error::Error`, so the crate is std-based.
error-forge = { version = "1", default-features = false }
# Durable write-ahead log backing `WalLog`, behind the `persistence` feature.
# Byte-record API only (no `pack-io` feature): raft-io frames its own records.
wal-db = { version = "1.0", optional = true, default-features = false }
# Typed message framing, behind the `framing` feature.
pack-io = { version = "1.0", optional = true, default-features = false }


# DEV DEPENDENCIES
# #################################
[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest  = "1"
tempfile  = "3"

[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"


# EXAMPLES
# #################################
# The persistent-log example needs the `persistence` feature, so it is only built
# when that feature is enabled (e.g. `cargo run --example persistent_node
# --features persistence`).
[[example]]
name              = "persistent_node"
required-features = ["persistence"]


# BENCHMARKS
# #################################
[[bench]]
name    = "raft_bench"
harness = false


# RELEASE PROFILE
# #################################
[profile.release]
opt-level     = 3
lto           = "fat"
codegen-units = 1
panic         = "abort"
strip         = "symbols"
